--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -2,10 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple page served by node.js</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1>From a static file</h1>
-    
+    <h1>about page</h1>
 </body>
 </html>
