finished creating partials

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -7,8 +7,7 @@
     <title>Simple page served by node.js</title>
 </head>
 <body>
-    <h1>Simple page created by node.js using hbs.</h1>
     {{>header}}
-    
+    {{>footer}}
 </body>
 </html>
