--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -3,12 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>404</title>
 </head>
 <body>
-
     {{>header}}
     {{>footer}}
-
 </body>
 </html>
