its working! you can search a place and get a forecast!

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -3,11 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/script.js"></script>
+    
     <title>Simple page served by node.js</title>
 </head>
 <body>
     {{>header}}
     {{>footer}}
+
+    <form>
+        <input type="text">
+        <button>Search</button>
+    </form>
+
+    <script src="/js/script.js"></script>
 </body>
 </html>
