done with changes, next is deployment!

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -9,11 +9,15 @@
 <body>
     {{>header}}
     {{>footer}}
+    
 
     <form>
         <input type="text">
         <button>Search</button>
     </form>
+    <p class="errorMessage"></p>
+    <p class="forecastMessage"></p>
+
 
     <script src="/js/script.js"></script>
 </body>
